tests/snapshots/run_wpt_conformance__litert_reduceMax_float32_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_max.https.any.js reduceMax float32 0D tensor default options, litert
 reduce_max :: reduceMax float32 0D tensor default options: index 0: actual=0.0000000000000000000000000000002484412 expected=32.166584 ulp=895445813 tolerance=0
  inputs: reduceMaxInput: [32.16658401489258]
  expected reduceMaxOutput: [32.166584]
  actual reduceMaxOutput: [0.0000000000000000000000000000002484412]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMaxInput: f32[];
  }

  nodes {
    [reduceMaxOutput] = reduceMax(reduceMaxInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMaxOutput; }
}
