tests/snapshots/run_wpt_conformance__litert_reduceMax_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_max.https.any.js reduceMax float32 0D tensor empty axes, litert
 reduce_max :: reduceMax float32 0D tensor empty axes: index 0: actual=0.00000000000000000000000000000012343894 expected=32.166584 ulp=903900917 tolerance=0
  inputs: reduceMaxInput: [32.16658401489258]
  expected reduceMaxOutput: [32.166584]
  actual reduceMaxOutput: [0.00000000000000000000000000000012343894]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMaxInput: f32[];
  }

  nodes {
    [reduceMaxOutput] = reduceMax(reduceMaxInput, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceMaxOutput; }
}
